After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740845 - crash when reciving a rtcp after teardown but before client finalize.
crash when reciving a rtcp after teardown but before client finalize.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
unspecified
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-28 11:56 UTC by Göran Jönsson
Modified: 2014-12-02 15:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gst-rtsp-server patch (3.03 KB, patch)
2014-11-28 11:56 UTC, Göran Jönsson
committed Details | Review

Description Göran Jönsson 2014-11-28 11:56:35 UTC
Created attachment 291716 [details] [review]
gst-rtsp-server patch

The problem was that there are transports that are not refed in a hash_table that are not longer valid after Teardown. But they can be used if there are an incomming rtcp before finalized.
Comment 1 Wim Taymans 2014-12-02 15:30:11 UTC
commit 058698c9cf07234857c0068ec483f09cc8e107fa
Author: Göran Jönsson <goranjn@axis.com>
Date:   Fri Nov 28 12:45:14 2014 +0100

    rtsp: Ref transports in hash table.
    
    Also ref streams for transports.
    This solves a crash when reciving a rtcp after teardown but before
    client finalize.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=740845